# project-zenavatar

./: README.md  main.py  realsense_video.avi  test_g1_camera.py  testing.py
aruco/: base_test.py  detect_table.py  detect_table2.py  generate_aruco.py  main.py  main2.py  plot_pose.py  pose_output_1.txt  requirements.txt  tote_detect_debug.py  tote_side_detect.py
aruco/camera_data/: realsense_info
aruco/realsense_latest/: pyvenv.cfg
aruco_depr/: base_test.py  generate_aruco.py  main.py
cpp_examples/: CMakeLists.txt  main.cpp
g1_camera_calib/: calculations.py  camera_to_torso.py  main.py
g1_camera_calib/robot_urdf_env/: pyvenv.cfg
point_cloud/: main.py  main2.py  pcl_latest.py  vis.py
